--- a/conf/application.conf
+++ b/conf/application.conf
@@ -61,7 +61,7 @@ play.i18n.langs = ["en"]
 # you may need to define a router file `conf/my.application.routes`.
 # Default to Routes in the root package (and conf/routes)
 # !!!WARNING!!! DO NOT CHANGE THIS ROUTER
-play.http.router = prod.Routes
+play.http.router = app.Routes
 
 # Controller
 # ~~~~~
@@ -73,7 +73,7 @@ controllers {
   # 300 is the default, you may need to change this according to your needs
   confidenceLevel = 300
 
-  uk.gov.hmrc.cipphonenumbervalidation.controllers.MicroserviceHelloWorldController = {
+  uk.gov.hmrc.cipphonenumbervalidation.controllers.ValidatePhoneNumberController = {
     needsAuth = false
     needsLogging = false
     needsAuditing = false
