--- a/conf/application.conf
+++ b/conf/application.conf
@@ -46,7 +46,6 @@ play.http.errorHandler = "uk.gov.hmrc.play.bootstrap.backend.http.JsonErrorHandl
 # ~~~~
 # Additional play modules can be added here
 
-
 # The application languages
 # ~~~~~
 play.i18n.langs = ["en"]
@@ -63,23 +62,6 @@ play.i18n.langs = ["en"]
 # !!!WARNING!!! DO NOT CHANGE THIS ROUTER
 play.http.router = prod.Routes
 
-# Controller
-# ~~~~~
-# By default all controllers will have authorisation, logging and
-# auditing (transaction monitoring) enabled.
-# The below controllers are the default exceptions to this rule.
-
-controllers {
-  # 300 is the default, you may need to change this according to your needs
-  confidenceLevel = 300
-
-  uk.gov.hmrc.cipphonenumbervalidation.controllers.ValidatePhoneNumberController = {
-    needsAuth = false
-    needsLogging = false
-    needsAuditing = false
-  }
-}
-
 # Metrics plugin settings - graphite reporting is configured on a per env basis
 metrics {
   name = ${appName}
@@ -87,13 +69,13 @@ metrics {
   durationUnit = SECONDS
   showSamples = true
   jvm = true
-  enabled = true
+  enabled = false
 }
 
 # Microservice specific config
 
 auditing {
-  enabled = true
+  enabled = false
   traceRequests = true
   consumer {
     baseUri {
@@ -110,13 +92,6 @@ microservice {
       port = 2003
       prefix = play.${appName}.
       enabled = false
-    }
-  }
-
-  services {
-    auth {
-      host = localhost
-      port = 8500
     }
   }
 }
