--- a/conf/application.conf
+++ b/conf/application.conf
@@ -44,7 +44,7 @@ play.http.errorHandler = "uk.gov.hmrc.play.bootstrap.backend.http.JsonErrorHandl
 
 # Play Modules
 # ~~~~
-# Additional play modules can be added here
+play.modules.enabled += "uk.gov.hmrc.cipphonenumbervalidation.config.Module"
 
 # The application languages
 # ~~~~~
