CAV-241: Investigate Technical implementation for Internal Auth
 - exemplar implementation of service-service with username retrieval

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -39,6 +39,9 @@ play.modules.enabled += "uk.gov.hmrc.play.bootstrap.backend.BackendModule"
 # Default http client
 play.modules.enabled += "uk.gov.hmrc.play.bootstrap.HttpClientModule"
 
+# Internal auth module
+play.modules.enabled += "uk.gov.hmrc.internalauth.client.modules.InternalAuthModule"
+
 # Json error handler
 play.http.errorHandler = "uk.gov.hmrc.play.bootstrap.backend.http.JsonErrorHandler"
 
@@ -92,6 +95,12 @@ microservice {
       port = 2003
       prefix = play.${appName}.
       enabled = false
+    }
+  }
+  services {
+    internal-auth {
+      host = localhost
+      port = 8470
     }
   }
 }
